--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=projetoUsuariosApi
 server.port=8082
 
 #DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5438/projetousuariosapi
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=usuariosuser
-spring.datasource.password=usuariospassword
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
