test: adiciona biblioteca javafaker e altera configurações de conexão com o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=projetoUsuariosApi
 server.port=8082
 
 #DATASOURCE
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=${SRING_DATASOURCE_URL:jdbc:postgresql://localhost:5438/projetousuariosapi}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.username=${POSTGRES_USER:usuariosuser}
+spring.datasource.password=${POSTGRES_PASSWORD:usuariospassword}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
