--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,15 +15,15 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secretkey=febe69f0-3e40-4e24-8bf7-4dbac44b1853
 jwt.expiration=3600000
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 
 
-spring.mail.host=localhost
-spring.mail.port=1025
+spring.mail.host=${MAILHOG_HOST:localhost}
+spring.mail.port=${MAILHOG_PORT:1025}
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
